3d阴影，使用帧缓冲渲染阴影，最大程度减少性能消耗

--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -470,7 +470,7 @@ APACHE:
 		FullSequence: pip-ammo
 		EmptySequence: pip-ammoempty
 		Palette: pips
-	WithShadow:
+	# WithShadow:
 	WithModelBody:
 		ShowShadow: False
 	GetWPos:
