--- a/mods/ts/weapons/missiles.yaml
+++ b/mods/ts/weapons/missiles.yaml
@@ -23,6 +23,7 @@
 		AllowSnapping: true
 		TerrainHeightAware: true
 		ContrailLength: 10
+		ContrailColor: F0E0E0
 	Warhead@1Dam: SpreadDamage
 		Spread: 108
 		Falloff: 100, 50, 25, 12, 6, 3, 0
