--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -22,6 +22,32 @@
 		ValidTargets: Water
 		InvalidTargets: Vehicle
 
+
+
+A10Vulcan:
+	Inherits: ^MG
+	ReloadDelay: 100
+	MinRange: 4c512
+	Burst: 15
+	BurstDelays: 3
+	Range: 10c0
+	Report: cygun1.aud
+	FirstBurstTargetOffset: -3000,0,0
+	FollowingBurstTargetOffset: 600,0,0
+	Projectile: Bullet
+		ContrailLength: 3
+		ContrailWidth: 44
+		ContrailColor: F0D05C
+		ContrailDelay: 0
+		ContrailBlendMode: Additive
+		Speed: 1100
+		LaunchAngle: 10
+		ZOffset: 1024
+	Warhead@1Dam: SpreadDamage
+		Damage: 5000
+		Spread: 0c372
+
+
 Minigun:
 	Inherits: ^MG
 	ReloadDelay: 21
