优化一些效果

--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -370,6 +370,8 @@ ORCATRAN:
 	SpawnActorOnDeath@EMP:
 		Actor: ORCATRAN.Husk.EMP
 		RequiresCondition: empdisable
+	Selectable:
+		Bounds: 1327, 1930, 0, -482
 
 TRNSPORT:
 	Inherits: ^EMPableAircraft
