--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -912,7 +912,7 @@
 		MaximumPitch: 120
 		LandableTerrainTypes: Clear, Road, Rail, DirtRoad, Rough, Tiberium, BlueTiberium, Veins
 		Crushes: crate, infantry
-		MoveIntoShroud: false
+		MoveIntoShroud: true
 		CanHover: true
 		CanSlide: true
 		VTOL: true
