添加一种混合模式

--- a/mods/ts/weapons/energyweapons.yaml
+++ b/mods/ts/weapons/energyweapons.yaml
@@ -7,6 +7,8 @@
 		Blockable: true
 		DamageActorsInLine: true
 		BeamColor: 0080FFC8
+		HelixColor: 0080FFC8
+		BeamBlendMode: ScreenAdditive
 	Warhead@1Dam: SpreadDamage
 		Range: 0, 32
 		Falloff: 100, 100
