基础skeleton系统，完成

--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -556,7 +556,22 @@ APACHE:
 	# WithShadow:
 	WithModelBody:
 		ShowShadow: False
-	GetWPos:
+	WithMesh@body:
+		Mesh: body
+	WithMesh@hair:
+		Mesh: hair
+	WithMesh@cater:
+		Mesh: cater
+	WithMesh@skirt:
+		Mesh: skirt-split
+	WithMesh@sweater:
+		Mesh: sweater
+	WithSkeleton:
+		Sequence: test
+	RenderMeshes:
+		Image: rumya-2
+		ZOffset: 15
+		Scale: 6
 
 HUNTER:
 	Inherits@2: ^ExistsInWorld
