--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -31,11 +31,13 @@ RUTEST:
 	Armament@PRIMARY:
 		Weapon: BikeMissile
 		RequiresCondition: !rank-elite
-		LocalOffset: -153,-204,509, -153,204,509
+		# LocalOffset: -153,-204,509, -153,204,509
+		FromBonePose: a-s-Rig_Hand.R, a-s-Rig_Hand.L
 	Armament@ELITE:
 		Weapon: HoverMissile
 		RequiresCondition: rank-elite
-		LocalOffset: -153,-204,509, -153,204,509
+		# LocalOffset: -153,-204,509, -153,204,509
+		FromBonePose: a-s-Rig_Hand.R, a-s-Rig_Hand.L
 	AttackFrontal:
 		Voice: Attack
 		PauseOnCondition: empdisable
@@ -128,6 +130,7 @@ RUTEST3:
 	Armament:
 		Weapon: Proton
 		PauseOnCondition: !ammo
+		FromBonePose: a-s-Rig_Hand.R, a-s-Rig_Hand.L
 	AttackAircraft:
 		Voice: Attack
 		FacingTolerance: 80
